# rocket-codebase

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  LICENSE.md  README.md
firmware/platform/esp32/: CMakeLists.txt
firmware/platform/esp32/main/: CMakeLists.txt  main.cpp
firmware/platform/host/: CMakeLists.txt  cli.py  main.cpp
firmware/platform/host/hal/: adc_driver_host.c  flash_driver_host.c  gpio_driver_host.c  i2c_driver_host.c  pwm_driver_host.c  spi_driver_host.c  stdio_driver_host.c  uart_driver_host.c  ws2812b_driver_host.c
firmware/platform/host/sitl/: sitl.h  sitl_freerun.cpp  sitl_lockstep.cpp
firmware/platform/pico/: CMakeLists.txt  FreeRTOSConfig.h  cli.py  main.cpp
firmware/platform/pico/board/: pico_custom_board.h  pico_obc.h
firmware/platform/pico/hal/: adc_driver_pico.c  flash_driver_pico.c  gpio_driver_pico.c  i2c_driver_pico.c  pwm_driver_pico.c  spi_driver_pico.c  stdio_driver_pico.c  time_driver_pico.c  uart_driver_pico.c  ws2812b_driver_pico.c
firmware/src/: CMakeLists.txt  app_main.cpp
firmware/src/cmake/: add_sys_test.cmake  compile_options.cmake  configure_python.cmake  logging_level.cmake  obc_add_test.cmake
firmware/src/gcs/: gen_datalink.py  platformio.ini
firmware/src/gcs/include/: commander.h  gps_controller.h  logger.h  maths.h  oled_controller.h  power_manager.h  radio_controller.h  serial_controller.h  state_manager.h
firmware/src/gcs/lib/: .gitignore
firmware/src/gcs/src/: commander.cpp  gps_controller.cpp  main.cpp  maths.cpp  oled_controller.cpp  power_manager.cpp  radio_controller.cpp  serial_controller.cpp  state_manager.cpp
firmware/src/lib/: CMakeLists.txt
firmware/src/lib/battery/: CMakeLists.txt  battery_interp_model.c  battery_interp_model.h
firmware/src/lib/datalink/: CMakeLists.txt
firmware/src/lib/debug/: CMakeLists.txt  obc_assert.c  obc_assert.h  obc_benchmark.c  obc_benchmark.h  sys_assert.c  sys_assert.h  sys_benchmark.c  sys_benchmark.h  sys_log.c  sys_log.h
firmware/src/lib/drivers/: CMakeLists.txt
firmware/src/lib/geo/: CMakeLists.txt  geo.c  geo.h  geo_mag.c  geo_mag.h  geo_utils.c  geo_utils.h  physical_constants.h  projection.c  projection.h  wgs84.c  wgs84.h
firmware/src/lib/maths/: CMakeLists.txt  fast_math.c  fast_math.h  math_constants.h  math_utils.c  math_utils.h  quaternion.c  quaternion.h  vector.c  vector.h
firmware/src/lib/network/: CMakeLists.txt
firmware/src/modules/: CMakeLists.txt
firmware/src/modules/airbrake/: AirbrakeModule.cpp  AirbrakeModule.h  CMakeLists.txt
firmware/src/modules/airbrake_nn/: AirbrakeNNModule.cpp  AirbrakeNNModule.h  CMakeLists.txt
firmware/src/modules/buzzer/: BuzzerMelodies.h  BuzzerModule.cpp  BuzzerModule.h  CMakeLists.txt
firmware/src/modules/com_lora/: CMakeLists.txt  LoRaCommunicationModule.cpp  LoRaCommunicationModule.h
firmware/src/modules/com_lora_gcs/: CMakeLists.txt  LoRaGCSCommunicationModule.cpp  LoRaGCSCommunicationModule.h
firmware/src/modules/com_radio/: CMakeLists.txt  RadioCommunicationModule.cpp  RadioCommunicationModule.h
firmware/src/modules/com_serial/: CMakeLists.txt  SerialCommunicationModule.cpp  SerialCommunicationModule.h
firmware/src/modules/com_uart/: CMakeLists.txt  UARTCommunicationModule.cpp  UARTCommunicationModule.h
firmware/src/modules/commander/: CMakeLists.txt  CommanderModule.cpp  CommanderModule.h
firmware/src/modules/commander_gcs/: CMakeLists.txt  CommanderGCSModule.cpp  CommanderGCSModule.h  GCSCommandHandler.cpp  GCSCommandHandler.h
firmware/src/modules/commander_obc/: CMakeLists.txt  CommanderOBCModule.cpp  CommanderOBCModule.h
firmware/src/modules/commander_rm/: CMakeLists.txt  CommanderRMModule.cpp  CommanderRMModule.h
firmware/src/modules/common/: CMakeLists.txt  ModuleLogger.cpp  ModuleLogger.h  add_module.cmake  obc_module.cmake
firmware/src/modules/database/: CMakeLists.txt  DatabaseCleaner.cpp  DatabaseCleaner.h  DatabaseFlashConfig.h  DatabaseMetadataController.cpp  DatabaseMetadataController.h  DatabaseModule.cpp  DatabaseModule.h  DatabaseReader.cpp  DatabaseReader.h  DatabaseWriter.cpp  DatabaseWriter.h
firmware/src/modules/ekf/: CMakeLists.txt  EKFConfig.h  EKFData.h  EKFModule.cpp  EKFModule.h  ekf.cpp  ekf.h  madgwick.c  madgwick.h
firmware/src/modules/gps_simple/: CMakeLists.txt  SimpleGPSModule.cpp  SimpleGPSModule.h
firmware/src/modules/ign/: CMakeLists.txt  IgnitersModule.cpp  IgnitersModule.h
firmware/src/modules/led/: CMakeLists.txt  LEDModule.cpp  LEDModule.h
firmware/src/modules/oled/: CMakeLists.txt  OLEDLogo.h  OLEDModule.h  OLEDModule_Common.cpp  OLEDModule_NormalMode.cpp  OLEDModule_TestMode.cpp
firmware/src/modules/pmu/: CMakeLists.txt  PMUModule.cpp  PMUModule.h
firmware/src/modules/runner/: CMakeLists.txt  ModulesRunner.h  runner_gen.py
firmware/src/modules/sensors/: CMakeLists.txt  DriverBase.h  Driver_adc_ign.cpp  Driver_adc_ign.h  Driver_battery.cpp  Driver_battery.h  Driver_bmi088.cpp  Driver_bmi088.h  Driver_gps.cpp  Driver_gps.h  Driver_mmc5983ma.cpp  Driver_mmc5983ma.h  Driver_ms5611.cpp  Driver_ms5611.h  SensorsModule.cpp  SensorsModule.h
firmware/src/modules/sim_bridge/: CMakeLists.txt  SimBridgeModule.cpp  SimBridgeModule.h
firmware/src/modules/sim_lora/: CMakeLists.txt  SimLoRaModule.cpp  SimLoRaModule.h
firmware/src/modules/sim_radio/: CMakeLists.txt  SimRadioModule.cpp  SimRadioModule.h
firmware/src/modules/sim_serial/: CMakeLists.txt  SimSerialModule.cpp  SimSerialModule.h
firmware/src/modules/sim_uart/: CMakeLists.txt  SimUARTModule.cpp  SimUARTModule.h
firmware/src/modules/state_machine/: CMakeLists.txt  SMConfig.h  StateMachineModule.cpp  StateMachineModule.h
firmware/src/modules/telemetry/: CMakeLists.txt  TelemetryModule.cpp  TelemetryModule.h
firmware/src/modules/voltage/: CMakeLists.txt  VoltageModule.cpp  VoltageModule.h
firmware/src/pubsub/: CMakeLists.txt  MessageBus.cpp  MessageBus.h  Publisher.h  RPCHandler.h  RPCRequest.h  Subscriber.h  Topics.h
firmware/src/pubsub/internal/: PubSubMeta.h
firmware/src/radio/: CMakeLists.txt
firmware/src/radio/src/: com_lora.cpp  com_lora.h  com_uart.h  (+4 more)
(+238 files in other folders)
